# guess-game

./: Makefile  pyproject.toml
.github/workflows/: ci.yml
guess_game/: game.py  utils.py
scripts/: play_game.py
